# fechat

./: .gitignore  CMakeLists.txt  build.sh  main.c
common/: common.c  common.h  messaging_queue.c  operation_parser.c
common/include/: common.h  messaging_queue.h  operation_parser.h
common/src/: common.c  messaging_queue.c  operation_parser.c
connection/: connect.c
connection/include/: communication_protocol.h  connect.h  connection_defines.h
connection/src/: connect.c
input_capture/: input_capture.c
input_capture/include/: input_capture.h
input_capture/src/: input_capture.c
server/: client.py  config.py  main.py  server.py
ui/: display.c  display.h  display_buffer.c  display_defines.h  login_page.c  login_page.h
ui/include/: display.h  display_buffer.h  display_defines.h  login_page.h
ui/src/: display.c  display_buffer.c  login_page.c
